# squeeze-pdf

./: .gitignore  .squeeze-pdf-intro.md  AGENTS.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml
apps/desktop-ui/: env.d.ts  index.html  package.json  uno.config.ts  vite.config.ts
apps/desktop-ui/src/: App.vue  style.css  types.ts
apps/desktop-ui/src/components/: DropZone.vue  FileList.vue  ResultSummary.vue  SettingsPanel.vue
apps/desktop-ui/src/composables/: useBridge.ts  useCompressJob.ts
apps/desktop-ui/src/utils/: format.ts
backend/: server.py
backend/api/: jobs.py  routes.py  ws.py
backend/squeeze/: __init__.py  compressor.py  types.py
client/: app.py  bridge.py
client/pyinstaller/: squeeze-pdf-macos.spec  squeeze-pdf-win.spec
docs/superpowers/plans/: 2026-06-02-desktop-refactor.md
docs/superpowers/specs/: 2026-06-02-desktop-refactor-design.md
scripts/: build-macos.sh  build-win.ps1  dev.sh  fetch_windows_build.sh  installer.iss
tests/: test_api.py  test_compressor.py  test_ws.py
