[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "squeeze-pdf"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
  "pymupdf>=1.24.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pywebview>=5.0",
]

[project.scripts]
squeeze-pdf = "client.app:main"

[project.optional-dependencies]
dev = ["pyinstaller>=6.0", "httpx>=0.27", "pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["backend*", "client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
